WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.9-dev, 2012-07-21


Version 0.3.9 (under dev!)
--------------------------

* core: scroll to bottom of window after reaching first or last highlight with
  keys alt+"p" / alt+"n"
* core: add support of arrays in hdata variables
* core: add command line option "-r" (or "--run-command") to run command(s)
  after startup of WeeChat
* core: fix refresh of bar items "buffer_filter" and "scroll" in root bars
  (bug #36816)
* core: add function "hook_set" in plugin API, add "subplugin" in hooks (set by
  script plugins), display subplugin in /help on commands (task #12049)
* core: add option weechat.look.jump_smart_back_to_buffer (jump back to initial
  buffer after reaching end of hotlist, on by default, which is old behaviour)
* core: add default key alt+"s" (toggle aspell)
* core: add cmake option "MANDIR" (bug #36776)
* core: add callback "nickcmp" in buffers
* core: add horizontal separator between windows, new options
  weechat.look.window_separator_{horizontal|vertical}
* core: add options weechat.look.color_nick_offline and
  weechat.color.chat_nick_offline{_highlight|_highlight_bg} to use different
  color for offline nicks in prefix (task #11109)
* core: reallow names beginning with "#" for bars, proxies and filters
* core: escape special chars (`#[\`) in configuration files for name of options
  (bug #36584)
* aspell: add option aspell.check.enabled, add options enable/disable/toggle for
  command /aspell (rename options enable/disable/dictlist to
  setdict/deldict/listdict), display aspell status with /aspell (task #11988)
* aspell: add missing dictionaries (ast/grc/hus/kn/ky)
* charset: do not allow "UTF-8" in charset options (useless because UTF-8 is the
  internal WeeChat charset)
* guile: fix crash when unloading a script without pointer to interpreter
* guile: fix path of guile include dirs in cmake build (patch #7790)