@@ -9,6 +9,7 @@ Version 0.3.9 (under dev!)
 
 * core: scroll to bottom of window after reaching first or last highlight with
   keys alt+"p" / alt+"n"
+* core: add hdata "hotlist"
 * core: add support of arrays in hdata variables
 * core: add command line option "-r" (or "--run-command") to run command(s)
   after startup of WeeChat
